--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,15 +29,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_mobx: ^1.1.0+2
-  mobx: ^1.2.1+4
+  shared_preferences: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  mobx_codegen: ^1.1.2
-  build_runner: ^1.11.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
